--- a/docs/main.ipynb
+++ b/docs/main.ipynb
@@ -2,12 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -42,11 +38,266 @@
     "# minus 기호 깨짐 방지\n",
     "plt.rcParams['axes.unicode_minus'] = False"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 데이터 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_reviews = pd.read_csv('./data/myfipn_db_reviews.csv')\n",
+    "df_blog = pd.read_csv('./data/myfipn_db_blog.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_reviews = df_reviews.drop(columns='_id').drop_duplicates()\n",
+    "df_blog = df_blog.drop(columns='_id').drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reviews의 date는 'YYYY-MM-DD' 형식의 문자열\n",
+    "df_reviews['date'] = pd.to_datetime(df_reviews['date'])\n",
+    "\n",
+    "# blog의 date는 'YYYYMMDD' 형식의 정수\n",
+    "df_blog['date'] = pd.to_datetime(df_blog['date'].astype(str), format='%Y%m%d')\n",
+    "\n",
+    "# 두 데이터프레임에 month 컬럼 생성 (YYYY-MM 형식)\n",
+    "df_reviews['month'] = df_reviews['date'].dt.strftime('%Y-%m')\n",
+    "df_blog['month'] = df_blog['date'].dt.strftime('%Y-%m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product</th>\n",
+       "      <th>price</th>\n",
+       "      <th>writer</th>\n",
+       "      <th>content</th>\n",
+       "      <th>date</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>김**</td>\n",
+       "      <td>NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2025-02-08</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2025-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>황**</td>\n",
+       "      <td>NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2025-02-08</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2025-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>김**</td>\n",
+       "      <td>NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2025-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>구**</td>\n",
+       "      <td>NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2025-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>이**</td>\n",
+       "      <td>NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2025-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5676</th>\n",
+       "      <td>라운 그란데 - 베이지 13.5 [원데이/10PCS]</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>박**</td>\n",
+       "      <td>고객님께서 해당 제품을 \"아쉬움\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2024-09-30</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2024-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5677</th>\n",
+       "      <td>라운 그란데 - 베이지 13.5 [원데이/10PCS]</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>신**</td>\n",
+       "      <td>고객님께서 해당 제품을 \"보통\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2024-09-29</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2024-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5678</th>\n",
+       "      <td>라운 그란데 - 베이지 13.5 [원데이/10PCS]</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>김**</td>\n",
+       "      <td>고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2024-09-26</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2024-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5679</th>\n",
+       "      <td>라운 그란데 - 베이지 13.5 [원데이/10PCS]</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>문**</td>\n",
+       "      <td>고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2024-09-24</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2024-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5681</th>\n",
+       "      <td>라운 그란데 - 베이지 13.5 [원데이/10PCS]</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>노**</td>\n",
+       "      <td>고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다.</td>\n",
+       "      <td>2024-09-20</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2024-09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4739 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               product  price writer  \\\n",
+       "0     픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]  30000    김**   \n",
+       "2     픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]  30000    황**   \n",
+       "4     픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]  30000    김**   \n",
+       "5     픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]  30000    구**   \n",
+       "7     픽싱 • 라운 그란데 - 애쉬 13.5 [원먼스/2PCS]  30000    이**   \n",
+       "...                                ...    ...    ...   \n",
+       "5676     라운 그란데 - 베이지 13.5 [원데이/10PCS]  23000    박**   \n",
+       "5677     라운 그란데 - 베이지 13.5 [원데이/10PCS]  23000    신**   \n",
+       "5678     라운 그란데 - 베이지 13.5 [원데이/10PCS]  23000    김**   \n",
+       "5679     라운 그란데 - 베이지 13.5 [원데이/10PCS]  23000    문**   \n",
+       "5681     라운 그란데 - 베이지 13.5 [원데이/10PCS]  23000    노**   \n",
+       "\n",
+       "                                content       date  rating    month  \n",
+       "0     NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2025-02-08    5.00  2025-02  \n",
+       "2     NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2025-02-08    5.00  2025-02  \n",
+       "4     NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2025-02-07    5.00  2025-02  \n",
+       "5     NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2025-02-07    5.00  2025-02  \n",
+       "7     NEW 고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2025-02-07    5.00  2025-02  \n",
+       "...                                 ...        ...     ...      ...  \n",
+       "5676     고객님께서 해당 제품을 \"아쉬움\"으로 평가해주셨습니다. 2024-09-30    1.00  2024-09  \n",
+       "5677      고객님께서 해당 제품을 \"보통\"으로 평가해주셨습니다. 2024-09-29    3.00  2024-09  \n",
+       "5678      고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2024-09-26    5.00  2024-09  \n",
+       "5679      고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2024-09-24    5.00  2024-09  \n",
+       "5681      고객님께서 해당 제품을 \"만족\"으로 평가해주셨습니다. 2024-09-20    5.00  2024-09  \n",
+       "\n",
+       "[4739 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
